--- a/docker/optimizer/Dockerfile
+++ b/docker/optimizer/Dockerfile
@@ -12,10 +12,13 @@ ENV CARGO_REGISTRIES_CRATES_IO_PROTOCOL=sparse
 # Install build dependencies
 RUN apk update && apk add --no-cache git musl-dev
 
-# Download source code
+# Download dango source code, build, then delete.
 RUN echo "Cloning commit: $LEFT_CURVE_GIT_COMMIT" \
-  && git clone --branch $LEFT_CURVE_GIT_COMMIT --depth 1 https://github.com/left-curve/left-curve.git \
+  && git init left-curve \
   && cd left-curve \
+  && git remote add origin https://github.com/left-curve/left-curve.git \
+  && git fetch --depth 1 origin $LEFT_CURVE_GIT_COMMIT \
+  && git checkout FETCH_HEAD \
   && cargo install --path dango/cli \
   && cd .. \
   && rm -rf left-curve
