--- a/.github/workflows/docker-multi.yaml
+++ b/.github/workflows/docker-multi.yaml
@@ -46,7 +46,7 @@ jobs:
         with:
           context: ./docker/dango
           build-args: |
-            LEFT_CURVE_GIT_COMMIT=${{ github.sha }}
+            GIT_COMMIT=${{ github.sha }}
           platforms: linux/amd64,linux/arm64
           tags: |
             ghcr.io/${{ github.repository }}/dango:${{ github.sha }}
@@ -67,7 +67,7 @@ jobs:
         with:
           context: ./docker/optimizer
           build-args: |
-            LEFT_CURVE_GIT_COMMIT=${{ github.sha }}
+            GIT_COMMIT=${{ github.sha }}
           platforms: linux/amd64,linux/arm64
           tags: |
             ghcr.io/${{ github.repository }}/optimizer:${{ github.sha }}
