--- a/docker/dango/Dockerfile
+++ b/docker/dango/Dockerfile
@@ -3,10 +3,13 @@ FROM rust:slim
 # Install dependencies.
 RUN apt update && apt install -y clang git libssl-dev pkg-config
 
+# Download the crates.io index using the new sparse protocol to improve performance
+# and avoid OOM in the build.
+ENV CARGO_REGISTRIES_CRATES_IO_PROTOCOL=sparse
+
 # Version of the left-curve monorepo.
 ARG GIT_COMMIT=main
 ENV COMMIT=$GIT_COMMIT
-
 
 # Download dango source code, build, then delete.
 RUN echo "Cloning commit: $GIT_COMMIT" \
