--- a/.github/workflows/docker-multi.yaml
+++ b/.github/workflows/docker-multi.yaml
@@ -52,23 +52,23 @@ jobs:
             ghcr.io/${{ github.repository }}/dango:${{ github.sha }}
             ghcr.io/${{ github.repository }}/dango:latest
 
-  build-optimizer:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: docker/setup-qemu-action@v3
-      - uses: docker/setup-buildx-action@v3
-      - uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - uses: docker/build-push-action@v5
-        with:
-          context: ./docker/optimizer
-          build-args: |
-            GIT_COMMIT=${{ github.sha }}
-          platforms: linux/amd64,linux/arm64
-          tags: |
-            ghcr.io/${{ github.repository }}/optimizer:${{ github.sha }}
-            ghcr.io/${{ github.repository }}/optimizer:latest
+  # build-optimizer:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: docker/setup-qemu-action@v3
+  #     - uses: docker/setup-buildx-action@v3
+  #     - uses: docker/login-action@v3
+  #       with:
+  #         registry: ghcr.io
+  #         username: ${{ github.actor }}
+  #         password: ${{ secrets.GITHUB_TOKEN }}
+  #     - uses: docker/build-push-action@v5
+  #       with:
+  #         context: ./docker/optimizer
+  #         build-args: |
+  #           GIT_COMMIT=${{ github.sha }}
+  #         platforms: linux/amd64,linux/arm64
+  #         tags: |
+  #           ghcr.io/${{ github.repository }}/optimizer:${{ github.sha }}
+  #           ghcr.io/${{ github.repository }}/optimizer:latest
