--- a/.github/workflows/docker-multi.yaml
+++ b/.github/workflows/docker-multi.yaml
@@ -53,6 +53,7 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository }}/dango:${{ github.sha }}
             ghcr.io/${{ github.repository }}/dango:latest
+          push: true
 
   # build-optimizer:
   #   runs-on: ubuntu-latest
