--- a/dango/testing/Cargo.toml
+++ b/dango/testing/Cargo.toml
@@ -46,6 +46,7 @@ dango-account-factory = { workspace = true, features = ["library"] }
 dango-auth            = { workspace = true }
 dango-bank            = { workspace = true, features = ["library"] }
 dango-httpd           = { workspace = true }
+dango-lending         = { workspace = true, features = ["library"] }
 dango-oracle          = { workspace = true, features = ["library"] }
 dango-types           = { workspace = true }
 dango-warp            = { workspace = true, features = ["library"] }
