remove unused dependencies and features

--- a/dango/types/Cargo.toml
+++ b/dango/types/Cargo.toml
@@ -11,16 +11,9 @@ version       = { workspace = true }
 
 [dependencies]
 anyhow          = { workspace = true }
-borsh           = { workspace = true, features = ["derive"] }
-byteorder       = { workspace = true }
-data-encoding   = { workspace = true }
 grug            = { workspace = true }
 hyperlane-types = { workspace = true }
 paste           = { workspace = true }
 pyth-types      = { workspace = true }
-serde           = { workspace = true, features = ["derive"] }
+serde           = { workspace = true }
 sha2            = { workspace = true }
-thiserror       = { workspace = true }
-
-[dev-dependencies]
-tokio = { workspace = true }
