--- a/ui/portal/web/package.json
+++ b/ui/portal/web/package.json
@@ -24,6 +24,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "catalog:",
     "fuzzysort": "^3.1.0",
+    "graphql-ws": "^6.0.4",
     "react": "catalog:",
     "react-dom": "catalog:",
     "react-hook-form": "catalog:",
