--- a/.github/workflows/docker-multi.yaml
+++ b/.github/workflows/docker-multi.yaml
@@ -32,6 +32,7 @@ jobs:
             ghcr.io/${{ github.repository }}/cometbft:latest
 
   build-dango:
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
