--- a/.github/workflows/docker-multi.yaml
+++ b/.github/workflows/docker-multi.yaml
@@ -30,6 +30,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
           tags: |
             ghcr.io/${{ github.repository }}/cometbft:${{ env.COMETBFT_GIT_TAG }}
+          push: true
 
   build-dango:
     permissions: write-all
