--- a/docker/dango/Dockerfile
+++ b/docker/dango/Dockerfile
@@ -1,5 +1,7 @@
 FROM rust:slim
 
+LABEL org.opencontainers.image.description "Dango docker image"
+
 # Install dependencies.
 RUN apt update && apt install -y clang git libssl-dev pkg-config
 
