--- a/.github/workflows/docker-multi.yaml
+++ b/.github/workflows/docker-multi.yaml
@@ -1,4 +1,4 @@
-name: Build & Push Multi-Arch Images to GHCR
+name: Build & Push Docker Images to GHCR
 
 env:
   COMETBFT_GIT_TAG: v0.38.17
@@ -37,8 +37,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      # - uses: docker/setup-qemu-action@v3
-      # - uses: docker/setup-buildx-action@v3
+      - uses: docker/setup-qemu-action@v3
+      - uses: docker/setup-buildx-action@v3
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -51,7 +51,7 @@ jobs:
           context: ./docker/dango
           build-args: |
             GIT_COMMIT=${{ github.sha }}
-          # platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm64
           tags: |
             ghcr.io/${{ github.repository }}/dango:${{ github.sha }}
           push: true
