--- a/.github/workflows/docker-multi.yaml
+++ b/.github/workflows/docker-multi.yaml
@@ -23,7 +23,19 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - uses: docker/build-push-action@v5
+      - name: Check if Docker image already exists
+        id: check-image
+        run: |
+          if docker manifest inspect ghcr.io/${{ github.repository }}/cometbft:${{ env.COMETBFT_GIT_TAG }} > /dev/null 2>&1; then
+            echo "Image with tag ${{ env.COMETBFT_GIT_TAG }} already exists, skipping build."
+            echo "skip_build=true" >> $GITHUB_OUTPUT
+          else
+            echo "Image does not exist, proceeding with build."
+            echo "skip_build=false" >> $GITHUB_OUTPUT
+          fi
+      - name: Build and push Docker image
+        if: steps.check-image.outputs.skip_build == 'false'
+        uses: docker/build-push-action@v5
         with:
           context: ./docker/cometbft
           build-args: |
