--- a/.github/workflows/docker-multi.yaml
+++ b/.github/workflows/docker-multi.yaml
@@ -46,32 +46,32 @@ jobs:
             ghcr.io/${{ github.repository }}/cometbft:${{ env.COMETBFT_GIT_TAG }}
           push: true
 
-  # build-dango-arm64:
-  #   permissions:
-  #     packages: write
-  #   runs-on: self-hosted # [self-hosted, arm64]
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: docker/setup-qemu-action@v3
-  #     - uses: docker/setup-buildx-action@v3
-  #     - uses: docker/login-action@v3
-  #       with:
-  #         registry: ghcr.io
-  #         username: ${{ github.actor }}
-  #         password: ${{ secrets.GITHUB_TOKEN }}
-  #     - name: build arm64
-  #       uses: docker/build-push-action@v5
-  #       env:
-  #         BUILDKIT_PROGRESS: plain
-  #       with:
-  #         context: ./docker/dango
-  #         build-args: |
-  #           GIT_COMMIT=${{ github.sha }}
-  #         platforms: linux/arm64
-  #         tags: |
-  #           ghcr.io/${{ github.repository }}/dango:${{ github.sha }}-arm64
-  #         push: true
-  #         no-cache: true
+  build-dango-arm64:
+    permissions:
+      packages: write
+    runs-on: self-hosted # [self-hosted, arm64]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: docker/setup-qemu-action@v3
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: build arm64
+        uses: docker/build-push-action@v5
+        env:
+          BUILDKIT_PROGRESS: plain
+        with:
+          context: ./docker/dango
+          build-args: |
+            GIT_COMMIT=${{ github.sha }}
+          platforms: linux/arm64
+          tags: |
+            ghcr.io/${{ github.repository }}/dango:${{ github.sha }}-arm64
+          push: true
+          no-cache: true
 
   build-dango-amd64:
     permissions:
@@ -100,19 +100,19 @@ jobs:
           push: true
           no-cache: true
 
-    # push-manifest:
-    #   needs: [build-dango-amd64, build-dango-arm64]
-    #   permissions:
-    #     packages: write
-    #   runs-on: ubuntu-latest
-    #   steps:
-    #     - name: Create and push manifest
-    #       run: |
-    #         docker manifest create ghcr.io/${{ github.repository }}/dango:${{ github.sha }} \
-    #           --amend ghcr.io/${{ github.repository }}/dango:${{ github.sha }}-amd64 \
-    #           --amend ghcr.io/${{ github.repository }}/dango:${{ github.sha }}-arm64
-    #
-    #         docker manifest push ghcr.io/${{ github.repository }}/dango:${{ github.sha }}
+  push-manifest:
+    needs: [build-dango-amd64, build-dango-arm64]
+    permissions:
+      packages: write
+    runs-on: ubuntu-latest
+    steps:
+      - name: Create and push manifest
+        run: |
+          docker manifest create ghcr.io/${{ github.repository }}/dango:${{ github.sha }} \
+            --amend ghcr.io/${{ github.repository }}/dango:${{ github.sha }}-amd64 \
+            --amend ghcr.io/${{ github.repository }}/dango:${{ github.sha }}-arm64
+
+          docker manifest push ghcr.io/${{ github.repository }}/dango:${{ github.sha }}
 
   # build-optimizer:
   #   runs-on: ubuntu-latest
