--- a/.github/workflows/docker-multi.yaml
+++ b/.github/workflows/docker-multi.yaml
@@ -106,6 +106,11 @@ jobs:
       packages: write
     runs-on: ubuntu-latest
     steps:
+      - uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Create and push manifest
         run: |
           docker manifest create ghcr.io/${{ github.repository }}/dango:${{ github.sha }} \
