--- a/.github/workflows/docker-multi.yaml
+++ b/.github/workflows/docker-multi.yaml
@@ -47,6 +47,7 @@ jobs:
           push: true
 
   build-dango-arm64:
+    if: false
     permissions:
       packages: write
     runs-on: self-hosted # [self-hosted, arm64]
@@ -74,7 +75,26 @@ jobs:
           provenance: false
           # no-cache: true
 
+  build-dango-arm64-with-cross:
+    permissions:
+      packages: write
+    runs-on: self-hosted
+    steps:
+      - uses: actions/checkout@v4
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Use cross to build Dango
+        run: |
+          cargo install cross
+          cross build --target aarch64-unknown-linux-gnu --release
+          docker buildx build --platform linux/arm64 --provenance=false --push -t ghcr.io/${{ github.repository }}/dango:${{ github.sha }}-arm64 -f docker/dango-arm .
+
   build-dango-amd64:
+    if: false
     permissions:
       packages: write
     runs-on: [self-hosted, X64]
@@ -103,6 +123,7 @@ jobs:
           # no-cache: true
 
   push-manifest:
+    if: false
     needs: [build-dango-amd64, build-dango-arm64]
     permissions:
       packages: write
