--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -28,7 +28,6 @@ jobs:
   test:
     needs: [format]
     name: Test + Lint
-    # runs-on: ubuntu-latest
     runs-on: self-hosted
     env:
       PGDATABASE: grug_test
@@ -57,6 +56,16 @@ jobs:
       #   run: |
       #     createdb -U postgres -h postgres "$PGDATABASE"
 
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
       - name: Run tests
         run: cargo test --all-features
         env:
@@ -77,6 +86,16 @@ jobs:
         with:
           toolchain: nightly
           components: rustfmt
+
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Run rustfmt checks
         run: cargo +nightly fmt --check --all
