--- a/docker/dango-arm/Dockerfile
+++ b/docker/dango-arm/Dockerfile
@@ -2,11 +2,13 @@ FROM debian:bookworm-slim
 
 LABEL org.opencontainers.image.description="Dango docker image"
 
+ARG TARGET_ARCH
+
 RUN apt-get update && \
     apt-get install -y libssl-dev pkg-config && \
     rm -rf /var/lib/apt/lists/*
 
-COPY target/aarch64-unknown-linux-gnu/release/dango /usr/local/bin/dango
+COPY target/${TARGET_ARCH}/release/dango /usr/local/bin/dango
 
 # Expose the indexer httpd (8080) and Tendermint ABCI (26658) ports.
 EXPOSE 8080 26658
