--- a/Cross.toml
+++ b/Cross.toml
@@ -1,2 +1,5 @@
 [target.aarch64-unknown-linux-gnu]
-image = "ghcr.io/left-curve/left-curve/arm-builder:latest"
+image = "ghcr.io/left-curve/cross-builder:latest"
+
+[target.x86_64-unknown-linux-gnu]
+image = "ghcr.io/left-curve/cross-builder:latest"
