--- a/.github/workflows/docker-multi.yaml
+++ b/.github/workflows/docker-multi.yaml
@@ -2,6 +2,7 @@ name: Build & Push Docker Images to GHCR
 
 env:
   COMETBFT_GIT_TAG: v0.38.17
+  GIT_COMMIT: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}
 
 on:
   push:
@@ -68,10 +69,10 @@ jobs:
         with:
           context: ./docker/dango
           build-args: |
-            GIT_COMMIT=${{ github.sha }}
+            GIT_COMMIT=${{ env.GIT_COMMIT }}
           platforms: linux/arm64
           tags: |
-            ghcr.io/${{ github.repository }}/dango:${{ github.sha }}-arm64
+            ghcr.io/${{ github.repository }}/dango:${{ env.GIT_COMMIT }}-arm64
           push: true
           provenance: false
           # no-cache: true
@@ -97,7 +98,7 @@ jobs:
         run: |
           cargo install cross
           cp dango/cli/src/git_info.rs dango/cli/src/git_info.rs.in
-          sed "s/{{GIT_COMMIT}}/${{ github.sha }}/" dango/cli/src/git_info.rs.in > dango/cli/src/git_info.rs
+          sed "s/{{GIT_COMMIT}}/${{ env.GIT_COMMIT }}/" dango/cli/src/git_info.rs.in > dango/cli/src/git_info.rs
           rm dango/cli/src/git_info.rs.in
 
           mkdir -p .cross-cache/aarch64-unknown-linux-gnu
@@ -107,9 +108,10 @@ jobs:
           docker buildx build \
               --platform linux/arm64 \
               --build-arg TARGET_ARCH=aarch64-unknown-linux-gnu \
+              --build-arg GIT_COMMIT=${{ env.GIT_COMMIT }} \
               --push \
               --provenance=false \
-              -t ghcr.io/left-curve/left-curve/dango:${{ github.sha }}-arm64 \
+              -t ghcr.io/left-curve/left-curve/dango:${{ env.GIT_COMMIT }}-arm64 \
               -f docker/dango-arm/Dockerfile .
 
   build-dango-amd64-with-cross:
@@ -133,7 +135,7 @@ jobs:
         run: |
           cargo install cross
           cp dango/cli/src/git_info.rs dango/cli/src/git_info.rs.in
-          sed "s/{{GIT_COMMIT}}/${{ github.sha }}/" dango/cli/src/git_info.rs.in > dango/cli/src/git_info.rs
+          sed "s/{{GIT_COMMIT}}/${{ env.GIT_COMMIT }}/" dango/cli/src/git_info.rs.in > dango/cli/src/git_info.rs
           rm dango/cli/src/git_info.rs.in
 
           mkdir -p .cross-cache/x86_64-unknown-linux-gnu
@@ -143,9 +145,10 @@ jobs:
           docker buildx build \
               --platform linux/amd64 \
               --build-arg TARGET_ARCH=x86_64-unknown-linux-gnu \
+              --build-arg GIT_COMMIT=${{ env.GIT_COMMIT }} \
               --push \
               --provenance=false \
-              -t ghcr.io/left-curve/left-curve/dango:${{ github.sha }}-amd64 \
+              -t ghcr.io/left-curve/left-curve/dango:${{ env.GIT_COMMIT }}-amd64 \
               -f docker/dango-arm/Dockerfile .
 
   build-dango-amd64:
@@ -170,10 +173,10 @@ jobs:
         with:
           context: ./docker/dango
           build-args: |
-            GIT_COMMIT=${{ github.sha }}
+            GIT_COMMIT=${{ env.GIT_COMMIT }}
           platforms: linux/amd64
           tags: |
-            ghcr.io/${{ github.repository }}/dango:${{ github.sha }}-amd64
+            ghcr.io/${{ github.repository }}/dango:${{ env.GIT_COMMIT }}-amd64
           push: true
           provenance: false
           # no-cache: true
@@ -191,11 +194,11 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Create and push manifest
         run: |
-          docker manifest create ghcr.io/${{ github.repository }}/dango:${{ github.sha }} \
-            --amend ghcr.io/${{ github.repository }}/dango:${{ github.sha }}-amd64 \
-            --amend ghcr.io/${{ github.repository }}/dango:${{ github.sha }}-arm64
+          docker manifest create ghcr.io/${{ github.repository }}/dango:${{ env.GIT_COMMIT }} \
+            --amend ghcr.io/${{ github.repository }}/dango:${{ env.GIT_COMMIT }}-amd64 \
+            --amend ghcr.io/${{ github.repository }}/dango:${{ env.GIT_COMMIT }}-arm64
 
-          docker manifest push ghcr.io/${{ github.repository }}/dango:${{ github.sha }}
+          docker manifest push ghcr.io/${{ github.repository }}/dango:${{ env.GIT_COMMIT }}
 
   # build-optimizer:
   #   runs-on: ubuntu-latest
