--- a/docker/dango-arm/Dockerfile
+++ b/docker/dango-arm/Dockerfile
@@ -1,8 +1,12 @@
 FROM debian:bookworm-slim
 
 LABEL org.opencontainers.image.description="Dango docker image"
+LABEL org.opencontainers.image.revision=$GIT_COMMIT
+LABEL org.opencontainers.image.source="https://github.com/left-curve/left-curve"
 
 ARG TARGET_ARCH
+ARG GIT_COMMIT
+ENV GIT_COMMIT=$GIT_COMMIT
 
 RUN apt-get update && \
     apt-get install -y libssl-dev pkg-config && \
