--- a/docker/native-builder/Dockerfile
+++ b/docker/native-builder/Dockerfile
@@ -2,15 +2,9 @@ FROM rust:bookworm
 
 LABEL org.opencontainers.image.source="https://github.com/left-curve/left-curve"
 
-RUN dpkg --add-architecture amd64 && \
-    apt-get update && apt-get install -y \
+RUN apt-get update && apt-get install -y \
     build-essential \
     libssl-dev \
-    gcc \
-    binutils \
-    gcc-x86-64-linux-gnu \
-    binutils-x86-64-linux-gnu \
-    libssl-dev:amd64 \
     clang \
     libclang-dev \
     llvm-dev \
@@ -20,4 +14,5 @@ RUN dpkg --add-architecture amd64 && \
     git && \
     rm -rf /var/lib/apt/lists/*
 
-ENV PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig
+ARG DEBIAN_ARCH=x86_64-linux-gnu
+ENV PKG_CONFIG_PATH=/usr/lib/${DEBIAN_ARCH}/pkgconfig
