--- a/docker/cross-builder-arm64/Dockerfile
+++ b/docker/cross-builder-arm64/Dockerfile
@@ -19,5 +19,7 @@ RUN dpkg --add-architecture arm64 && \
       gcc-aarch64-linux-gnu && \
     rm -rf /var/lib/apt/lists/*
 
+RUN rustup target add aarch64-unknown-linux-gnu
+
 # Set PKG_CONFIG_PATH for aarch64
 ENV PKG_CONFIG_PATH=/usr/lib/aarch64-linux-gnu/pkgconfig
