--- a/docker/native-builder/Dockerfile
+++ b/docker/native-builder/Dockerfile
@@ -14,5 +14,8 @@ RUN apt-get update && apt-get install -y \
     git && \
     rm -rf /var/lib/apt/lists/*
 
+RUN rustup target add aarch64-unknown-linux-gnu
+RUN rustup target add x86_64-unknown-linux-gnu
+
 ARG DEBIAN_ARCH=x86_64-linux-gnu
 ENV PKG_CONFIG_PATH=/usr/lib/${DEBIAN_ARCH}/pkgconfig
