--- a/Cross.toml
+++ b/Cross.toml
@@ -2,4 +2,4 @@
 image = "ghcr.io/left-curve/left-curve/native-builder"
 
 [target.x86_64-unknown-linux-gnu]
-image = "ghcr.io/left-curve/left-curve/cross-builder:amd64"
+image = "ghcr.io/left-curve/left-curve/cross-builder"
