--- a/docker/cross-builder-amd64/Dockerfile
+++ b/docker/cross-builder-amd64/Dockerfile
@@ -9,6 +9,7 @@ RUN dpkg --add-architecture amd64 && \
     gcc \
     binutils \
     gcc-x86-64-linux-gnu \
+    g++-x86-64-linux-gnu \
     binutils-x86-64-linux-gnu \
     libssl-dev:amd64 \
     clang \
@@ -22,6 +23,12 @@ RUN dpkg --add-architecture amd64 && \
 
 RUN rustup target add x86_64-unknown-linux-gnu
 
+RUN update-alternatives --install /usr/bin/cc cc /usr/bin/x86_64-linux-gnu-gcc 100
+
+RUN update-alternatives --install /usr/bin/c++ c++ /usr/bin/x86_64-linux-gnu-g++ 100
+
+ENV CXX_x86_64_unknown_linux_gnu=x86_64-linux-gnu-g++
+ENV CC_x86_64_unknown_linux_gnu=x86_64-linux-gnu-gcc
 ENV PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig
 ENV PKG_CONFIG_ALLOW_CROSS=1
 ENV OPENSSL_DIR=/usr
