--- a/docker/cross-builder-arm64/Dockerfile
+++ b/docker/cross-builder-arm64/Dockerfile
@@ -21,7 +21,9 @@ RUN dpkg --add-architecture arm64 && \
 
 RUN rustup target add aarch64-unknown-linux-gnu
 
-# Set PKG_CONFIG_PATH for aarch64
+RUN update-alternatives --install /usr/bin/cc cc /usr/bin/aarch64-linux-gnu-gcc 100
+
+ENV CC_aarch64_unknown_linux_gnu=aarch64-linux-gnu-gcc
 ENV PKG_CONFIG_PATH=/usr/lib/aarch64-linux-gnu/pkgconfig
 ENV PKG_CONFIG_ALLOW_CROSS=1
 ENV OPENSSL_DIR=/usr
